--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Latest Posts
-excerpt: "A simple and clean responsive Jekyll theme for words and photos."
+title: Aktuelle Posts
+excerpt: "Ein neuer Blog, aktuelle Posts"
 search_omit: true
 ---
 
